fixed broken css for structure.css/report-item-icon

--- a/tm/tm.web/src/main/webapp/styles/structure.css
+++ b/tm/tm.web/src/main/webapp/styles/structure.css
@@ -667,7 +667,7 @@ div#search-result .library {
 	cursor: pointer;
 }
 
-.report-item- {
+.report-item-icon {
 	float: left;
 }
 
